--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ h1 {
 main {
     display: inline-block;
     width: 550px;
-    height: 440px;
+    height: 420px;
     margin: auto;
     border: 3px solid #000099;
     padding: 12px 20px 12px 20px;
 }
 
-a:link {
+a {
     color: #00ff00;
 }
 
