--- a/style.css
+++ b/style.css
@@ -56,4 +56,7 @@ a:hover {
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
-  
+
+a:visited {
+    color: inherit;
+}
