--- a/style.css
+++ b/style.css
@@ -1,32 +1,4 @@
-body {
-    background-color: #212224;
-    color:#f8f1df;
-    text-align: center;
-    font-size: 18px; 
-}
-
-h1 {
-    color:  #00d7ff;
-}
-
-.center {
-    position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-}
-
-main {
-    display: inline-block;
-    width: 550px;
-    height: 420px;
-    margin: auto;
-    border: 3px solid #000099;
-    padding: 12px 20px 12px 20px;
-}
-
-a {
+a, a:active, a:visited {
     color: #00ff00;
 }
 
@@ -57,6 +29,31 @@ a:hover {
       100%{background-position:0% 50%}
   }
 
-a:visited {
-    color: inherit;
+body {
+    background-color: #191a1b;
+    color:#f8f1df;
+    text-align: center;
+    font-size: 18px; 
+}
+
+h1 {
+    color:  #00d7ff;
+}
+
+.center {
+    position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+}
+
+main {
+    display: inline-block;
+    width: 50%;
+    /* width: 550px;
+    height: 420px; */
+    margin: auto;
+    border: 3px solid #000099;
+    padding: 12px 20px 12px 20px;
 }
