--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+
+/* For desktop */
+@media only screen and (min-width: 768px) {
+    .container { 
+        display: inline-block;
+        width: 450px;
+        height: 450px;
+        margin: auto;
+        position: relative;
+        border: 3px double #000099;
+        padding: 12px 20px 12px 20px;
+    }
+      
+    .center {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+}
+
 a, a:active, a:visited {
     color: #00ec00;
-    text-decoration: none;
+    text-decoration: none; 
 }
 
 a:hover {
@@ -30,30 +58,41 @@ a:hover {
       100%{background-position:0% 50%}
   }
 
+h1 {
+    color:  #00d7ff;
+}
+
 body {
-    background-color: #191a1b;
+    background-color: #121213;
     color:#f8f1df;
     text-align: center;
     font-size: 18px; 
 }
 
-h1 {
-    color:  #00d7ff;
-}
+textarea {
+    height: 35px;
+    resize: none;
+  }
 
-.center {
-    position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-}
 
-main {
-    display: inline-block;
-    width: 550px;
-    height: 420px;
-    margin: auto;
-    border: 3px solid #000099;
-    padding: 12px 20px 12px 20px;
+#imshake:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+  
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
 }
+  
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}  
